--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
     "controls": "^0.7.5",
     "framer-motion": "^12.11.0",
     "gsap": "^3.13.0",
+    "i18next": "^25.2.1",
     "lucide-react": "^0.511.0",
     "motion": "^12.12.1",
     "next": "15.3.1",
+    "next-i18next": "^15.4.2",
+    "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
+    "nookies": "^2.5.2",
     "react": "^19.0.0",
     "react-animations": "^1.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.2",
     "react-icons": "^4.10.1",
     "react-type-animation": "^3.2.0",
     "TagCloud": "^2.5.0",
