--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-animations": "^1.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.2",
+    "react-icon-cloud": "^2.0.4",
     "react-icons": "^4.10.1",
     "react-type-animation": "^3.2.0",
     "TagCloud": "^2.5.0",
